# mesh_reapairer

./: .gitignore  .pre-commit-config.yaml  Makefile  Readme.md  pyproject.toml  pytest.ini  visualize-config.json
docs/: architecture.md  usage.md
results/: small_spheres_result.json  sphere.json  sphere_result.json
scripts/: __init__.py  diag_can_split.py  diag_inner_removal.py  diag_unreachable.py  test_restore.py  visualize_pipeline.py
src/mesh_reapairer/: __init__.py
src/mesh_reapairer/application/: __init__.py  orchestrator.py
src/mesh_reapairer/cli/: __init__.py  main.py
src/mesh_reapairer/infrastructure/: __init__.py  io.py  measures.py
src/mesh_reapairer/msu/: __init__.py  mesh.py
src/mesh_reapairer/restorer/: __init__.py  fixer.py  restorer.py  triangulator.py
src/mesh_reapairer/restorer/application/: __init__.py  config.py  restore_mesh.py
src/mesh_reapairer/restorer/domain/: __init__.py  entities.py
src/mesh_reapairer/restorer/infrastructure/: __init__.py  fan_triangulator.py  mesh_walker.py
src/mesh_reapairer/self_intersection_finder/: __init__.py  bvh_builder.py  intersection_finder.py  intersection_repairer.py  main.py
src/mesh_reapairer/self_intersection_finder/application/: config.py  find_self_intersections.py
src/mesh_reapairer/self_intersection_finder/domain/: entities.py  enums.py  interfaces.py  value_objects.py
src/mesh_reapairer/self_intersection_finder/infrastructure/bvh/: builder.py  traverser.py
src/mesh_reapairer/self_intersection_finder/utils/: geometry.py  logging_config.py
src/mesh_reapairer/vizualizator/: __init__.py  face_plotter.py  graph_plotter.py  graph_visualizer.py  intersection_graph_plotter.py  intersection_graph_plotter_v2.py  intersection_result_plotter.py  line_plotter.py  mesh_plotter.py  plane_plotter.py  point_plotter.py  primitive_plotter.py  segment_plotter.py  triangulation_plotter.py
tests/: __init__.py  test_cli.py  test_io.py  test_pipeline.py
(+12 files in other folders)
